# oni

./: README.md  index.md  main.py  main.sqlite  pyproject.toml  web_server.py
cogs/: Apex.py  Code.py  Fun.py  Help.py  Images.py  Message.py  Music.py  Osu.py  Template.py
data/: weapons.txt
data/apex/: weapons.txt
