[tool.poetry]
name = "oni"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2021.1"
yfinance = "^0.1.55"
youtube-dl = "^2021.3.14"
aiohttp = "^3.7.4"
async-timeout = "^3.0.1"
Pillow = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
